# applaudgen

./: .gitmodules  README.md  app_store_connect_api.json  applaudgen.py  pyproject.toml
applaudgen/generators/: __init__.py  python.py  utils.py
applaudgen/generators/builders/: endpoint.py  schema.py
applaudgen/templates/python/: __init__.py.jinja  connection.py.jinja  fields.py.jinja  header.jinja  includes.py.jinja
applaudgen/templates/python/endpoints/: class.py.jinja  exists_function.py.jinja  fields_function.py.jinja  filter_function.py.jinja  include_function.py.jinja  limit_function.py.jinja  package.py.jinja  sort_function.py.jinja
applaudgen/templates/python/schemas/: class.py.jinja  enum.py.jinja  enums.py.jinja  models.py.jinja  requests.py.jinja  responses.py.jinja
