[tool.poetry]
name = "applaudgen"
version = "0.1.0"
description = "SDK generator to the App Store Connect API from Apple."
authors = ["Yang.Y <yang@yangyubo.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.3"
orjson = "^3.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
